--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -45,8 +45,7 @@
             android:layout_height="34dp"
             android:background="@drawable/borde_editext"
             android:inputType="text"
-            android:paddingLeft="4pt"
-            />
+            android:paddingLeft="4pt" />
 
         <TextView
             android:id="@+id/CategoryTitle"
@@ -79,7 +78,7 @@
         <EditText
             android:id="@+id/DescriptionField"
             android:layout_width="match_parent"
-            android:layout_height="138dp"
+            android:layout_height="74dp"
             android:height="138dp"
             android:background="@drawable/borde_editext"
             android:inputType="text"
@@ -96,8 +95,8 @@
             android:textSize="10pt" />
 
         <LinearLayout
-            android:layout_width="321dp"
-            android:layout_height="108dp"
+            android:layout_width="324dp"
+            android:layout_height="40dp"
             android:layout_margin="12pt"
             android:orientation="horizontal">
 
@@ -122,8 +121,7 @@
                 android:id="@+id/numberPickerMinutes"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -138,11 +136,105 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/PlanificationTitle"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:paddingTop="3pt"
+            android:text="Planificación Deseada:"
+            android:textColor="#1d5874"
+            android:textSize="10pt" />
+
+        <LinearLayout
+            android:layout_width="324dp"
+            android:layout_height="40dp"
+            android:layout_margin="12pt"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textFecha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Fecha (Día/Mes):"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="20sp" />
+
+            <NumberPicker
+                android:id="@+id/numberPickerDay"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textBarra1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="/"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="20sp" />
+
+            <NumberPicker
+                android:id="@+id/numberPickerMonth"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="324dp"
+            android:layout_height="40dp"
+            android:layout_margin="12pt"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textHoraPlan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Hora:"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="20sp" />
+
+            <NumberPicker
+                android:id="@+id/numberPickerHoraPlan"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                />
+
+            <TextView
+                android:id="@+id/textPuntos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text=":"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="20sp" />
+
+            <NumberPicker
+                android:id="@+id/numberPickerMinPlan"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                />
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="horizontal"
-            android:gravity="center" >
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/buttonToForm"
@@ -150,10 +242,10 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="6dp"
                 android:backgroundTint="#223752"
+                android:onClick="sendFormButton"
                 android:text="Añadir"
                 android:textSize="18sp"
-                app:cornerRadius="9pt"
-                android:onClick="sendFormButton"/>
+                app:cornerRadius="9pt" />
         </LinearLayout>
 
     </LinearLayout>
