--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -145,47 +145,11 @@
             android:textColor="#1d5874"
             android:textSize="10pt" />
 
-        <LinearLayout
-            android:layout_width="324dp"
-            android:layout_height="40dp"
-            android:layout_margin="12pt"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textFecha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:text="Fecha (Día/Mes):"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="20sp" />
-
-            <NumberPicker
-                android:id="@+id/numberPickerDay"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <TextView
-                android:id="@+id/textBarra1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:text="/"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="20sp" />
-
-            <NumberPicker
-                android:id="@+id/numberPickerMonth"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-        </LinearLayout>
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="324dp"
