--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -136,14 +136,26 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/PlanificationTitle"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:paddingTop="3pt"
-            android:text="Planificación Deseada:"
-            android:textColor="#1d5874"
-            android:textSize="10pt" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/PlanificationTitle"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="3pt"
+                android:text="Planificación Deseada:"
+                android:textColor="#1d5874"
+                android:textSize="10pt" />
+        </LinearLayout>
 
         <CalendarView
             android:id="@+id/calendarView"
