--- a/app/src/main/res/layout/fragment_tareas.xml
+++ b/app/src/main/res/layout/fragment_tareas.xml
@@ -6,16 +6,11 @@
     android:layout_height="match_parent"
     tools:context="presentacion.TaskListFragment">
 
-    <ScrollView
-        android:id="@+id/ScrollView02"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scrollbars="vertical"
-        android:background="#e2f2f2" >
+
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingStart="10pt"
             android:paddingLeft="10pt"
@@ -25,7 +20,7 @@
             <TextView
                 android:id="@+id/TaskListTitle"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:paddingTop="6pt"
                 android:paddingBottom="12pt"
                 android:text="Lista de tareas"
@@ -39,9 +34,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="532dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="20sp" />
+                android:textSize="10pt" />
+
         </LinearLayout>
-    </ScrollView>
+
+
 
 
     <LinearLayout
