--- a/app/src/main/res/layout/tarea_item.xml
+++ b/app/src/main/res/layout/tarea_item.xml
@@ -22,7 +22,7 @@
         android:paddingEnd="4dp" />
 
     <TextView
-        android:id="@+id/tareaAsignatura"
+        android:id="@+id/tareaPlanificacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp" />
