--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,10 +4,10 @@
     <item android:title=""
         android:id="@+id/navbar_calendario"/>
         <!--android:icon="@drawable/baseline_calendar_month_24"-->
-    <item android:title="Horario"
+    <item android:title=""
         android:id="@+id/navbar_horario"/>
     <!--android:icon="@drawable/baseline_watch_later_24"-->
-<item android:title="Recordatorios"
+<item android:title=""
     android:id="@+id/navbar_recordatorio"/>
     <!--android:icon="@drawable/baseline_doorbell_24"/>-->
 <item android:title="Lista tareas"
