--- a/app/src/main/res/layout/fragment_tareas.xml
+++ b/app/src/main/res/layout/fragment_tareas.xml
@@ -3,8 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/fragmentTareas"
     android:layout_height="match_parent"
     tools:context="presentacion.TaskListFragment">
+
 
     <ScrollView
         android:id="@+id/ScrollView02"
