--- a/app/src/main/res/layout/fragment_recordatorios.xml
+++ b/app/src/main/res/layout/fragment_recordatorios.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context="presentacion.RecordatoriosFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom|end"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/buttonToFormRecordatorio"
+            android:layout_width="66dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="#223752"
+            android:text="+"
+            android:textSize="34sp"
+            app:cornerRadius="20pt"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.916"
+            app:layout_constraintStart_toStartOf="parent" />
+    </LinearLayout>
+
 </FrameLayout>
