--- a/app/src/main/res/layout/fragment_tareas.xml
+++ b/app/src/main/res/layout/fragment_tareas.xml
@@ -2,48 +2,44 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/fragmentTareas"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="presentacion.TaskListFragment">
 
 
-    <ScrollView
-        android:id="@+id/ScrollView02"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scrollbars="vertical"
-        android:background="#e2f2f2" >
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingStart="10pt"
+        android:paddingLeft="10pt"
+        android:paddingEnd="10pt"
+        android:paddingBottom="10pt">
+
+        <TextView
+            android:id="@+id/TaskListTitle"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical"
-            android:paddingStart="10pt"
-            android:paddingLeft="10pt"
-            android:paddingEnd="10pt"
-            android:paddingBottom="10pt">
+            android:layout_height="wrap_content"
+            android:paddingTop="6pt"
+            android:paddingBottom="12pt"
+            android:text="Lista de tareas"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#004262"
+            android:textSize="15pt" />
 
-            <TextView
-                android:id="@+id/TaskListTitle"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:paddingTop="6pt"
-                android:paddingBottom="12pt"
-                android:text="Lista de tareas"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textColor="#004262"
-                android:textSize="15pt" />
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="fill_parent"
+            android:layout_height="532dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="10pt" />
 
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="fill_parent"
-                android:layout_height="532dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+
+
 
 
     <LinearLayout
