--- a/app/src/main/res/layout/fragment_detalle_tarea.xml
+++ b/app/src/main/res/layout/fragment_detalle_tarea.xml
@@ -115,17 +115,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"></Space>
 
-            <TextView
-                android:id="@+id/noCompletada"
-                android:layout_width="match_parent"
+            <CheckBox
+                android:id="@+id/checkboxCompletada"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_border"
-                android:padding="10dp"
-                android:text="Estado: no completada \n "
-                android:textColor="@color/black" />
+                android:text="Marcar como completada"
+                android:checked="false"/>
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="40dp"></Space>
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
