--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,10 +7,10 @@
     <item android:title=""
         android:id="@+id/navbar_horario"/>
     <!--android:icon="@drawable/baseline_watch_later_24"-->
-<item android:title=""
-    android:id="@+id/navbar_recordatorio"/>
-    <!--android:icon="@drawable/baseline_doorbell_24"/>-->
-<item android:title="Lista tareas"
-    android:id="@+id/navbar_lista"
-    android:icon="@drawable/baseline_format_list_numbered_24"/>
+    <item android:title="Recordatorios"
+        android:id="@+id/navbar_recordatorio"
+        android:icon="@drawable/baseline_doorbell_24"/>
+    <item android:title="Lista tareas"
+        android:id="@+id/navbar_lista"
+        android:icon="@drawable/baseline_format_list_numbered_24"/>
 </menu>
